# voice-voice-workflow

./: CURRENT_STATUS.md  PLAN.md  README.md  client_instructions.py
architecture/: diagram.mermaid
docs/: ROADMAP.md
docs/architecture/: high_level_diagram.mermaid  runtime_startup.mermaid
docs/guides/: CLIENT_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  LOAD_TESTING.md  OBSERVABILITY.md
docs/reference/: CONFIGURATION.md  SECURITY.md
helm/riva-api/: Chart.yaml  values.yaml
helm/voice-workflow/: Chart.yaml  values-minimal.yaml  values-prod.yaml  values.yaml
k8s/base/: asr-service.yaml  ingress.yaml  kustomization.yaml  llm-server.yaml  llm-service.yaml  namespace.yaml  redis.yaml  riva-server.yaml  tts-service.yaml  voice-gateway.yaml
k8s/infra/: 00-namespace-pvc.yaml  nim-llm.yaml  riva-values.yaml
proto/: voice_service.proto  voice_workflow.proto
scripts/: build_gateway.sh  deploy.sh  deploy_gateway.sh  deploy_infra.sh  deploy_riva.sh  setup_observability.sh  test-e2e.py
services/voice-gateway/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/voice-gateway/src/: config.py  gateway.py  main.py  metrics.py  voice_workflow_pb2.py  voice_workflow_pb2_grpc.py
services/voice-gateway/src/clients/: asr.py  llm.py  tts.py
services/voice-gateway/tests/: setup_mac_client.sh  test_asr.py  test_client.py  test_gateway.py  test_llm.py  test_mic_client.py  test_sine_wave.py  test_tts.py  test_wav_client.py
services/voice-gateway/tests/load/: __init__.py  audio_pool.py  collector.py  config.py  light_results.json  load_test.py  runner.py  worker.py
(+41 files in other folders)
